# float34

./: .gitignore  Kconfig  README.md  build.yaml  opencode.json  pyproject.toml
.github/workflows/: build.yml
boards/shields/float30/: Kconfig.defconfig  Kconfig.shield  float30.conf  float30.dtsi  float30.zmk.yml  float30_left.overlay  float30_right.overlay
config/: float30.conf  float30.keymap  float34_left.keymap  west.yml
config/boards/shields/float34/: Kconfig.defconfig  Kconfig.shield  float34.conf  float34.dtsi  float34.zmk.yml  float34_left.overlay  float34_right.overlay
pcb/: _autosave-charybdis.kicad_pcb  blank.kicad_pcb  blank.kicad_prl  blank.kicad_pro  flex.kicad_prl  flex.kicad_pro  fp-lib-table
pcb/custom.pretty/: SW_Choc_reversible.kicad_mod
zephyr/: module.yml
