[project]
name = "float30"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.9.0",
    "colorlog>=6.10.1",
    "kicad-python>=0.7.1",
    "kicad-skip>=0.2.5",
    "pillow>=12.2.0",
    "pynng>=0.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sexpdata>=1.0.2",
]
